--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style=" border: 5px solid;
-margin: auto;
+<html lang="en" style="margin: auto;
 width: 50%;
 padding: 10px;">
   <head>
